force-app/main/default/objects/Service_Req_Form__c/Service_Req_Form__c.object-meta.xml
<CustomObject>
    <label>Service Req Form</label>
    <nameField>
        <displayFormat>SRF-{00000}</displayFormat>
        <label>Service Req Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Req Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>