force-app/main/default/objects/Service_Req_Form__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Service Req Forms</relationshipLabel>
    <relationshipName>Service_Req_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>