force-app/main/default/objects/Service_Req_Form__c/fields/SMB_Customer__c.field-meta.xml
<CustomField>
    <fullName>SMB_Customer__c</fullName>
    <label>SMB Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Req Forms</relationshipLabel>
    <relationshipName>Service_Req_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>