force-app/main/default/objects/Service_Req_Form__c/fields/SMB_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>SMB_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Check ths warehosue</inlineHelpText>
    <label>SMB Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Service Req Forms</relationshipLabel>
    <relationshipName>Service_Req_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>